--- a/transformData.Rmd
+++ b/transformData.Rmd
@@ -109,7 +109,8 @@ kable(data.frame(prop.table(table(W1$a_vote6))), digits = 2)
 As you can see, at this point we have four 'nested' functions (functions within other functions) and the code becomes difficult to read. With the pipe operator **%>%** (Shift+Ctrl+M on Windows or Shift+Cmd+M on Mac) you can achieve the same result with the following code:
 
 ```{r cache = TRUE}
-# Loading the 'tidyverse' package, in which the package containing the pipe operator ('dplyr') is found.
+# Loading the 'tidyverse' package, in which the package containing the
+# pipe operator ('dplyr') is found.
 
 library(tidyverse)
 
@@ -129,7 +130,9 @@ For your assignment, you will only want to work with select variables from *Unde
 Here, we will select the variables for sex, age, place of birth and measures of weight and height, as well as the personal identification variable for each individual. In base R you could use the following code:
 
 ```{r cache = TRUE}
-newW1 <- subset(W1, select = c("pidp", "a_sex", "a_dvage", "a_ukborn", "a_hlht", "a_hlhtf", "a_hlhti", "a_hlhtc", "a_hlwt", "a_hlwts", "a_hlwtp", "a_hlwtk"))
+newW1 <- subset(W1, select = c("pidp", "a_sex", "a_dvage", "a_ukborn", "a_hlht",
+                               "a_hlhtf", "a_hlhti", "a_hlhtc", "a_hlwt", "a_hlwts",
+                               "a_hlwtp", "a_hlwtk"))
 head(newW1, 3)
 ```
 
@@ -164,7 +167,8 @@ newW1 %>%
   filter(a_sex == 2 & (a_dvage >= 18 & a_dvage <=25)) %>%
   head(3)
 
-# Note: In this case we are not saving the new data frame as an object, but instead printing the first three rows from the data to demonstrate the result.
+# Note: In this case we are not saving the new data frame as an object, but instead
+# printing the first three rows from the data to demonstrate the result.
 ```
 
 We can make this as complicated as we want and use more than one variable. For example, here is a new data frame that includes only people born in Wales or Northern Ireland *and* over the age of 40.
@@ -190,7 +194,10 @@ newW1$a_Scotland <- ifelse(newW1$a_ukborn == 2, 1, 0)
 However, there are often times when you will want to recode a number of values from a variable. If you look at the code book for *Understanding Society*, you can see that the variable *ukborn* is coded to give numerical values that correspond to a country of birth. To make interpreting this variable easier, both for us and for anyone reading our analysis of the *Understanding Society* data, we can recode this variable to instead show the country name, rather than a numerical value, as its output. In this case, as there are multiple values we want to recode, the final clause in the **ifelse()** command can be set as another **ifelse()** command to recode other values from this variable, before setting those outside all of the values we are interested in (such as responses where this question was refused an answer) as *NA* to finish the command.
 
 ```{r cache = TRUE}
-# Instead of recoding the variable and overwriting the original, we create a new variable to put the recoded variable in, as if we make a mistake with our code and have overwritten the original data, we will have to reload the dataset and start this process again. It is good coding practice to never overwrite original data.
+# Instead of recoding the variable and overwriting the original, we create a new variable
+# to put the recoded variable in, as if we make a mistake with our code and have overwritten
+# the original data, we will have to reload the dataset and start this process again. It is
+# good coding practice to never overwrite original data.
 
 newW1$a_uk <- ifelse(newW1$a_ukborn == 1, 'England',
                      ifelse(newW1$a_ukborn == 2, 'Scotland',
@@ -203,7 +210,8 @@ newW1$a_uk <- ifelse(newW1$a_ukborn == 1, 'England',
 Once again, however, **dplyr** makes this process shorter to write and easier to read. The **recode** command allows us to do this. However, this will overwrite our original variable, and as already discussed, this is bad practice. Consequently, we will use the **mutate** command (which we will explore in more detail in *Create new variables*) to make a new variable in which to put this recoding.
 
 ```{r cache = TRUE}
-# The command '.default = NA_character_' codes all the values that were not specifically matched (all negative values in our case) to missing values.
+# The command '.default = NA_character_' codes all the values that were not specifically
+# matched (all negative values in our case) to missing values.
 
 AltW1 <- newW1 %>% mutate(a_placeBirth = recode(a_ukborn,
                              "1" = "England",
@@ -242,17 +250,26 @@ W1mod <- newW1 %>%
                            a_hlhtf * 30.48 + a_hlhti * 2.54,
                            ifelse(a_hlht == 2 & a_hlhtc > 0,
                                   a_hlhtc, NA))) %>%
-    # New variable 'heightcm': if height is measured in feet and inches (a_hlht == 1) and is not missing (a_hlhtf > 0),
-    # Multiply feet by 30.48 and inches by 2.54 to convert these measurements to centimetres and add them together, entering height as this new value.
-    # If height is not measured in feet and inches, but centimetres instead (a_hlht == 2), and is not missing (a_hlhtf > 0), enter height as this value, and if height is measured in neither feet and inches nor in centimetres, set the value for height as 'NA'.
+    # New variable 'heightcm': if height is measured in feet and inches (a_hlht == 1)
+    # and is not missing (a_hlhtf > 0),
+    # Multiply feet by 30.48 and inches by 2.54 to convert these measurements to
+    # centimetres and add them together, entering height as this new value.
+    # If height is not measured in feet and inches, but centimetres instead
+    # (a_hlht == 2), and is not missing (a_hlhtf > 0), enter height as this value,
+    # and if height is measured in neither feet and inches nor in centimetres, set
+    # the value for height as 'NA'.
   # Now do the same for weight, converting into kilograms.
   mutate(weightkg = ifelse(a_hlwt == 1 & a_hlwts > 0, 
                            a_hlwts * 6.35 + a_hlwtp * 0.45,
                            ifelse(a_hlwt == 2 & a_hlwtk > 0, 
                                   a_hlwtk, NA))) %>%
-    # New variable 'weightkg': if weight is measured in stone and pounds (a_hlwt == 1) and is not missing (a_hlwts > 0),
-    # Multiply stone by 6.35 and pounds by 0.45 to convert these measurements to kilograms and add these together, entering weight as this new value.
-    # If weight is not measured in stone and pounds, but kilograms instead (a_hlwt == 2), and is not missing (a_hlhtf > 0), enter weight as this value, and if weight is measured in neither stone and pounds nor in kilograms, set the value for weight as 'NA'.
+    # New variable 'weightkg': if weight is measured in stone and pounds (a_hlwt == 1)
+    # and is not missing (a_hlwts > 0),
+    # Multiply stone by 6.35 and pounds by 0.45 to convert these measurements to
+    # kilograms and add these together, entering weight as this new value.
+    # If weight is not measured in stone and pounds, but kilograms instead (a_hlwt == 2),
+    # and is not missing (a_hlhtf > 0), enter weight as this value, and if weight is
+    # measured in neither stone and pounds nor in kilograms, set the value for weight as 'NA'.
   # Finally create a variable for BMI.
   mutate(bmi = weightkg / (heightcm / 100) ^ 2)
     # New variable 'bmi': 'weightkg' / ('hightcm' / 100) ^ 2)
